--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
-        "twig/twig": "^1.24"
+        "twig/twig": "^1.24",
+        "symfony/translation": "^3.1",
+        "symfony/twig-bridge": "^3.1",
+        "symfony/yaml": "^3.1"
     }
 }
