--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,10 @@
         "twig/twig": "^1.24",
         "symfony/translation": "^3.1",
         "symfony/twig-bridge": "^3.1",
-        "symfony/yaml": "^3.1"
+        "symfony/yaml": "^3.1",
+        "fabpot/goutte": "^3.1"
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^3.1"
     }
 }
