--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+    "autoload": {
+        "psr-4": {
+            "FBTGenerator\\": "src/"
+        }
+    },
     "require": {
         "twig/twig": "^1.24",
         "symfony/translation": "^3.1",
